# gisplit

./: LICENSE  README.md  requirements.txt  setup.cfg
gisplit/: __init__.py  base_models.py  egboost.py  gisplit.py  nudge.py  skyclass.py
gisplit/tools/: __init__.py  filters.py  plotting.py
