[metadata]
name = gisplit
version = 0.1.0
description = Global irradiance splitting (GISPLIT)
author = Jose A Ruiz-Arias
author_email = jararias@uma.es
url = https://github.com/jararias/gisplit
long_description = file: README.md
long_description_content_type = text/x-markdown
license = file: LICENSE
classifiers = 
    Natural Language :: English
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages_dir = gisplit
packages = find_namespace:

[options.package_data]
gisplit.parameters =
    gisplit_for_obs_01min_caelus_*.zip

; [options.extras_require]
; devel =
;     Cartopy==0.22.0
;     dataframe_image==0.1.11
